# nespera

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  clippy.bat
src/: bus.rs  console.rs  cpu.rs  flags.rs  lib.rs  main.rs  nes.rs  opc.rs  ram.rs
src/asm/: mod.rs
src/bus/: cpu_data.rs  mod.rs  ppu_data.rs
src/cartridge/: location.rs  mapper.rs  mapper000.rs  mod.rs
src/cpu/: bus.rs  cycle.rs  flags.rs  log.rs  mod.rs  opc.rs  reg.rs
src/hardware/: bus.rs  cpu.rs  cycle.rs  flags.rs  mem.rs  mod.rs  nes.rs  opc.rs  ram.rs
src/loader/: ines.rs  mod.rs
src/mapper/: cartridge.rs  location.rs  mapper000.rs  mod.rs
src/mos6502/: bus.rs  cpu.rs  cycle.rs  flags.rs  microcode.rs  mod.rs  opc.rs  reg.rs
src/ppu/: mod.rs
src/ui/: mod.rs  palette.rs
src/utils/: bits.rs
tests/: arithmetic.rs  braches.rs  compare.rs  cpu.rs  incdec.rs  jump.rs  load.rs  logical.rs  nestest.rs  ppu.rs  status.rs  store.rs  transfer.rs
