[package]
name = "nespera"
version = "0.1.0"
authors = ["Caio Souza <caiophilipevs@gmail.com>"]
edition = '2018'

[dependencies]
pretty-hex = "0.1.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_off"] }
env_logger = "0.6.0"
image = "*"
chrono = "0.4"
piston_window = "0.81.0"

[profile.release]
debug = true
